{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 37,
  "lineage": "258bb3bf-251d-d0a5-dd9c-3555b49d1141",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:internet-gateway/igw-02e10d4656545e2d3",
            "id": "igw-02e10d4656545e2d3",
            "owner_id": "992382751223",
            "tags": {
              "Name": "dev-proj-1-igw"
            },
            "tags_all": {
              "Name": "dev-proj-1-igw"
            },
            "vpc_id": "vpc-03e6db2d2d79750f3"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:route-table/rtb-0695c42e1880f4bb8",
            "id": "rtb-0695c42e1880f4bb8",
            "owner_id": "992382751223",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-proj-1-private-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e6db2d2d79750f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:route-table/rtb-0b422d13c817cbd06",
            "id": "rtb-0b422d13c817cbd06",
            "owner_id": "992382751223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e10d4656545e2d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-proj-1-public-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e6db2d2d79750f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bed750bf31c4975",
            "route_table_id": "rtb-0695c42e1880f4bb8",
            "subnet_id": "subnet-055146e333fe1a07f"
          },
          "dependencies": [
            "module.network.aws_route_table.dev_proj_1_private_subnets",
            "module.network.aws_subnet.dev_proj_1_private_subnets",
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e7b5694923c3b13",
            "route_table_id": "rtb-0695c42e1880f4bb8",
            "subnet_id": "subnet-07baa4f09b39d5783"
          },
          "dependencies": [
            "module.network.aws_route_table.dev_proj_1_private_subnets",
            "module.network.aws_subnet.dev_proj_1_private_subnets",
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ed7812e5cfd65d",
            "route_table_id": "rtb-0b422d13c817cbd06",
            "subnet_id": "subnet-0edb80e9eb13d4df0"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.network.aws_route_table.dev_proj_1_public_route_table",
            "module.network.aws_subnet.dev_proj_1_public_subnets",
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:subnet/subnet-055146e333fe1a07f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055146e333fe1a07f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382751223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-03e6db2d2d79750f3"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:subnet/subnet-07baa4f09b39d5783",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07baa4f09b39d5783",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382751223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-03e6db2d2d79750f3"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:subnet/subnet-0edb80e9eb13d4df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edb80e9eb13d4df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382751223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-03e6db2d2d79750f3"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_1_vpc_eu_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382751223:vpc/vpc-03e6db2d2d79750f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0e2f080ed925177d6",
            "default_route_table_id": "rtb-01f69bae98aaa4f47",
            "default_security_group_id": "sg-023eb1ee69b0d4041",
            "dhcp_options_id": "dopt-0adb0b6e337ee4128",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e6db2d2d79750f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f69bae98aaa4f47",
            "owner_id": "992382751223",
            "tags": {
              "Name": "dev-proj-jenkins-eu-west-vpc-1"
            },
            "tags_all": {
              "Name": "dev-proj-jenkins-eu-west-vpc-1"
            }
          }
        }
      ]
    }
  ]
}